# mini-crm

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
migrations/: env.py
migrations/versions/: 27a13a14c0e0_initial_schema.py  548ccc21f46b_initial_migration.py
src/: main.py
src/app/: __init__.py  main.py
src/app/api/v1/: dependencies.py  router.py
src/app/api/v1/endpoints/: __init__.py  activities.py  analytics.py  auth.py  contacts.py  deals.py  organizations.py  tasks.py
src/app/api/v1/schemas/: __init__.py  activity.py  analytics.py  auth.py  base.py  contact.py  deal.py  organization.py  task.py  user.py
src/app/core/: cache.py  config.py  database.py  exceptions.py  security.py
src/app/db/: __init__.py  base.py  session.py
src/app/models/: __init__.py  activity.py  contact.py  deal.py  enums.py  organization.py  organization_member.py  task.py  user.py
src/app/repositories/: __init__.py  activity.py  base.py  contact.py  deal.py  organization.py  task.py  user.py
src/app/services/: analytics.py  deal.py
src/services/: auth.py  contact.py  deal.py  organization.py  task.py
tests/: conftest.py
tests/integration/: test_analytics.py  test_auth.py  test_contacts.py  test_deals.py  test_tasks.py
tests/unit/: test_deal_service.py  test_enums.py  test_security.py  test_task_service.py
