[tool.poetry]
name = "mini-crm"
version = "0.1.0"
description = "Multi-tenant mini-CRM backend service"
authors = ["Developer <dev@example.com>"]

packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

# Web framework
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}

# Database
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.25"}
asyncpg = ">=0.29.0"
alembic = ">=1.13.1"

# Authentication
pyjwt = ">=2.8.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}

# Configuration & Validation
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"

# Caching
redis = ">=5.0.1"

# Utils
python-multipart = ">=0.0.6"
httpx = ">=0.26.0"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=7.4.4"
pytest-asyncio = ">=0.23.3"
pytest-cov = ">=4.1.0"
factory-boy = ">=3.3.0"
faker = ">=22.0.0"
psycopg2-binary = ">=2.9.9"

# Type checking
mypy = ">=1.8.0"
types-passlib = ">=1.7.7"
types-redis = ">=4.6.0"

# Linting
ruff = ">=0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["app"]


[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
exclude = [
    "alembic/",
    "tests/",
]

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "passlib.*",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.coverage.run]
source = ["src/app"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]